# sql-analyst-RL

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: pre_validate.sh  sample_inference_hackathon.py  sample_inference_reference.py
server/: __init__.py  app.py  database.py  graders.py  sql_analyst_env_environment.py
tests/: test_database.py  test_environment.py  test_graders.py
